# octopus-challenge

./: DockerFile  README.md  database_dump.db  pyproject.toml
edi_reader/: __main__.py  database.py  edi_parser.py  logger.py  main.py
edi_reader/conf/: edi_config.py
edi_reader/conf/conf_model/: elements.json
edi_reader/exception/: error.py
edi_reader/input/: 867_02_ex_02.edi  867_02_ex_04.edi
tests/: test_edi_parser.py
tests/input/input/: 867_02_ex_03.edi  bad_id.edi  incorrect_length.edi  wrong_seg.edi
tests/input/wrong_conf/: elements.json  model.json
