[tool.poetry]
name = "edi_reader"
version = "0.1.0"
description = ""
authors = ["Valentin Dupont <valentin.m.dupont@gmail.com>"]
readme = "README.md"
packages = [{include = "edi_reader"}]

[tool.poetry.dependencies]
python = "^3.10"
coloredlogs = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
